@@ -6,7 +6,6 @@
 
 <body bgcolor="#ffffff">
 <h1>.NET classes for Ant</h1>
-<p>By Steve Loughran; steve_l@iseran.com</p>
 
 <h2>Vision</h2>
 <p>
@@ -54,7 +53,6 @@ removed from the build.xml files.</p>
 <li>Type Library Exporter (TlbExp.exe) .dll -&gt; .tlb</li>
 <li>TlbImp.exe Type Library Importer </li>
 <li>RegAsm.exe Assembly Registration Tool .dll -&gt; .reg | registration</li>
-<li>WebServiceUtil -SOAP proxy import, SDL generation tool</li>
 </ol>
 
 <h2>Ant Wrapper for net tasks</h2>
@@ -97,7 +95,7 @@ and behaviours. Probability: 100%. Impact: 2 days.</li>
 To use the net tasks one needs
 <ul>
 
-<li> A Win2K box (or any other platform which supports the .net build tools)</li>
+<li> A Windows box (or any other platform which supports the .net build tools)</li>
 
 <li> JavaVM - Java1.1 or later; Java1.3 recommended.</li>
 
@@ -118,6 +116,15 @@ version crimson.jar and jaxp.jar.</li>
 <hr>
 <h2> Change Log </h2>
 
+<h4>Version 0.4</h4>
+This is the beta-2 revision of the tasks. 
+<ol>
+<li>ILASM: pulled the owner attribute, added keyfile for giving binaries a strong name
+(MD5 hash of the checksum)
+<li>CSC: added win32res , noConfig, utf8output, fullpaths
+<li>CSC: 
+</ol>
+ 
 <h4>Version 0.3</h4>
 
 The changes here reflect Beta-1 of the dotnet SDK and experience of use in 
@@ -245,6 +252,11 @@ Specifying the output file with <b>'outfile'</b> seems prudent. </p>
     <td valign="top">&quot;true&quot;(default) or &quot;false&quot;</td>
     </tr>
   <tr>
+    <td valign="top">fullpaths</td>
+    <td valign="top">print the full path of files on on errors</td>
+  </tr>
+    
+  <tr>
     <td valign="top">includes</td>
     <td valign="top">comma separated list of patterns of files that must be
       included. All files are included when omitted.</td>
@@ -273,6 +285,13 @@ Specifying the output file with <b>'outfile'</b> seems prudent. </p>
     <td valign="top">mainClass</td>
     <td valign="top">name of main class for executables</td>
     <td valign="top">&quot;com.example.project.entrypoint&quot;</td>
+    </tr>
+<tr>
+    <td valign="top">noConfig</td>
+    <td valign="top">a flag which tells the compiler not
+    to read in the compiler settings files 'csc.rsp' in its
+    bin directory and then the local directory</td>
+    <td valign="top">&quot;true&quot; or &quot;false&quot;(default)</td>
     </tr>
 <tr>
     <td valign="top">optimize</td>
@@ -308,7 +327,12 @@ Specifying the output file with <b>'outfile'</b> seems prudent. </p>
     </tr>
 <tr>
     <td valign="top">unsafe</td>
-    <td valign="top">enable unsafe code</td>
+    <td valign="top">enable the <b>unsafe</b> keyword</td>
+    <td valign="top">&quot;true&quot; or &quot;false&quot;(default)</td>
+    </tr>
+<tr>
+    <td valign="top">utf8output</td>
+    <td valign="top">require all compiler output to be in utf-8 format</td>
     <td valign="top">&quot;true&quot; or &quot;false&quot;(default)</td>
     </tr>
 <tr>
@@ -321,6 +345,12 @@ Specifying the output file with <b>'outfile'</b> seems prudent. </p>
     <td valign="top">win32Icon</td>
     <td valign="top">filename of icon to include</td>
  	<td valign="top">&quot;res/myicon.ico&quot;</td>
+   </tr>
+<tr>
+    <td valign="top">win32res</td>
+    <td valign="top">filename of a win32 resource (.RES)file to include
+    This is not a .NET resource, but it what windows is used to.</td>
+ 	<td valign="top">&quot;res/myapp.res&quot;</td>
    </tr>
 
 </table>
@@ -344,7 +374,7 @@ Example
 <hr>
 <h2> Task: ilasm </h2>
 <p>Task to assemble .net 'Intermediate Language' files.
-The task will only work on win2K until other platforms support csc.exe or 
+The task will only work on windows until other platforms support csc.exe or 
 an equivalent. ilasm.exe must be on the execute path too.
 </p>
 <p>
@@ -399,7 +429,8 @@ manually specified with <b>outfile</b>
   <tr>
     <td valign="top">extraOptions</td>
     <td valign="top">Any extra options which aren't explicitly 
-		supported by the ilasm task </td>
+		supported by the ilasm task, primarily because they
+                arent really documented: use ilasm /? to see them</td>
 	<td></td>
   </tr>
   
@@ -408,6 +439,11 @@ manually specified with <b>outfile</b>
     <td valign="top">Should a failed compile halt the build?</td>
     <td valign="top">&quot;true&quot;(default)</td>
     </tr>
+<tr>
+    <td valign="top">fullpaths</td>
+    <td valign="top">Should error text provide the full path to files</td>
+    <td valign="top">&quot;true&quot;(default)</td>
+    </tr>    
   <tr>
     <td valign="top">includes</td>
     <td valign="top">comma separated list of patterns of files that must be
@@ -417,6 +453,12 @@ manually specified with <b>outfile</b>
     <td valign="top">includesfile</td>
     <td valign="top">the name of a file. Each line of this file is
       taken to be an include pattern</td>
+  </tr>
+  <tr>
+    <td valign="top">keyfile</td>
+    <td valign="top">the name of a file containing a private key, with which
+      the assembly output is checksumed and then MD5 signed 
+      to have a <i>strong name</i></td>
   </tr>
 <tr>
     <td valign="top">listing</td>
@@ -428,11 +470,6 @@ manually specified with <b>outfile</b>
     <td valign="top">outputFile</td>
     <td valign="top">filename of output</td>
     <td valign="top">&quot;example.exe&quot;</td>
-    </tr>
-<tr>
-    <td valign="top">owner</td>
-    <td valign="top">restrict disassembly by setting the 'owner' string</td>
-    <td valign="top">&quot;secret&quot;</td>
     </tr>
 <tr>
     <td valign="top">resourceFile</td>
